# api/models/order.ts
@@ -6,7 +6,8 @@ module.exports = (sequelize, DataTypes) => {
     eventId: { type: DataTypes.UUID, allowNull: true, unique: false },
     number: { type: DataTypes.INTEGER, autoIncrement: true, unique: true },
     totalAmount: { type: DataTypes.DOUBLE, allowNull: false, unique: false, defaultValue: 0 },
-    printCount: { type: DataTypes.INTEGER, allowNull: false, defaultValue: 0 }
+    printCount: { type: DataTypes.INTEGER, allowNull: false, defaultValue: 0 },
+    customTableName: { type: DataTypes.STRING, allowNull: true }
   });
 
   Order.associate = models => {
