# api/router/api/events.ts
@@ -5,11 +5,16 @@ const db = require('../../models');
 const requireRole = require('../permissions');
 
 async function loadSetting() {
-  return db.Setting.findOne();
+  return db.Setting.findOne({
+    attributes: { exclude: ['customTables'] }
+  });
 }
 
 async function loadSettingWithTransaction(transaction: any) {
-  return db.Setting.findOne({ transaction });
+  return db.Setting.findOne({
+    attributes: { exclude: ['customTables'] },
+    transaction
+  });
 }
 
 router.get('/', requireRole('admin'), async function (req, res) {
