# waiter/src/types/state.ts
@@ -3,6 +3,7 @@ import type { OrderItem } from "./models";
 export type CurrentOrder = {
   orderItems: OrderItem[];
   tableId: string | null;
+  customTableName?: string | null;
   printId?: string;
 }
 
